# re-mote

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-course.py  cfg-build.cmd  forwarding_channel.cpp  forwarding_channel.h  job_dialog.cpp  job_dialog.h  job_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  notebook_controller.cpp  notebook_controller.h  password_dialog.cpp  password_dialog.h  password_dialog.ui  ssh_client.cpp  ssh_client.h  ssh_port_forward.cpp  ssh_port_forward.h  vcpkg.json
